[gd_scene load_steps=4 format=3 uid="uid://dqnw3mr4qw53p"]

[ext_resource type="Script" uid="uid://n8hbopem8bmh" path="res://scripts/Fase_2/card_resposta_fase_2.gd" id="1_fv5ka"]
[ext_resource type="Texture2D" uid="uid://baesiealf76yy" path="res://imagens/cards_Fase_1/pg2_a4.png" id="2_ffakb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_84waf"]
size = Vector2(155, 153)

[node name="CardResposta_Fase_2" type="Area2D"]
script = ExtResource("1_fv5ka")

[node name="SpriteCard_Fase_2" type="Sprite2D" parent="."]
scale = Vector2(0.05, 0.05)
texture = ExtResource("2_ffakb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0.5)
scale = Vector2(0.53, 0.53)
shape = SubResource("RectangleShape2D_84waf")

[connection signal="input_event" from="." to="." method="_on_input_event"]
