extends Area2D
class_name CardResposta_2

signal resposta_arrastada(valor: int)

var valor: int = 0
var posicao_original: Vector2
var fixado: bool = false

@onready var sprite: Sprite2D = get_node_or_null("$SpriteCard_Fase_2")

var _arrastando := false
var _offset: Vector2

func _ready():
	# ‚≠ê NOVO: Extrair valor automaticamente do nome
	_extrair_valor_do_nome()
	
	# Configurar posi√ß√£o original
	if posicao_original == Vector2.ZERO:
		posicao_original = global_position
	
	# Conectar input_event - ‚úÖ CORRE√á√ÉO: sintaxe corrigida
	if not input_event.is_connected(_on_input_event):
		input_event.connect(_on_input_event)
	
	input_pickable = true
	
	print("‚úÖ Card carregado - Nome: ", name, " - Valor: ", valor)

# ‚≠ê NOVO: M√©todo para extrair valor do nome
func _extrair_valor_do_nome():
	# Procura por n√∫meros no nome do n√≥
	var regex = RegEx.new()
	
	# Tenta compilar a express√£o regular
	if regex.compile("(\\d+)") == OK:
		var resultado = regex.search(name)
		if resultado:
			valor = resultado.get_string().to_int()
			print("üéØ Valor extra√≠do do nome: ", name, " ‚Üí ", valor)
		else:
			push_warning("‚ùå Nenhum n√∫mero encontrado no nome do card: " + name)
			valor = 0
	else:
		push_error("‚ùå Erro ao compilar regex")
		valor = 0

# ‚≠ê CORRE√á√ÉO: M√©todo configurar atualizado
func configurar(_valor: int) -> void:
	self.valor = _valor
	print("üîß Card ", name, " configurado - Valor: ", valor)

# ‚úÖ CORRE√á√ÉO: M√©todo _on_input_event com par√¢metros corretos
func _on_input_event(_viewport: Node, event: InputEvent, _shape_idx: int):
	if fixado:
		return
	
	if event is InputEventMouseButton and event.button_index == MOUSE_BUTTON_LEFT:
		if event.pressed:
			_iniciar_arrasto()
		else:
			if _arrastando:
				_terminar_arrasto()
	
	elif event is InputEventMouseMotion and _arrastando:
		global_position = get_global_mouse_position() + _offset

func _iniciar_arrasto():
	_arrastando = true
	_offset = global_position - get_global_mouse_position()
	z_index = 10
	get_viewport().set_input_as_handled()
	print("üîÑ Iniciando arrasto do card: ", name, " - Valor: ", valor)

func _terminar_arrasto():
	_arrastando = false
	z_index = 0
	_processar_soltura()

func _processar_soltura():
	print("üîÑ Soltando card: ", name, " - Valor: ", valor)
	
	# ‚≠ê‚≠ê MELHORIA: Buscar √°reas de forma mais robusta
	var areas_sobrepostas = get_overlapping_areas()
	var area_resposta_proxima = null
	var menor_distancia = 200.0  # Aumentar dist√¢ncia m√°xima
	
	print("üîç √Åreas sobrepostas encontradas: ", areas_sobrepostas.size())
	
	for area in areas_sobrepostas:
		print("   - √Årea sobreposta: ", area.name, " | Tipo: ", area.get_class())
		
		# ‚≠ê‚≠ê SIMPLIFICADO: Seguir a mesma l√≥gica da Fase 1
		if area is AreaResposta_2 or area.has_method("resultado_esperado"):
			var distancia = global_position.distance_to(area.global_position)
			print("      ‚úÖ Reconhecida como AreaResposta_2 - Dist√¢ncia: ", distancia)
			
			if distancia < menor_distancia:
				menor_distancia = distancia
				area_resposta_proxima = area
				print("      ‚úÖ √Årea mais pr√≥xima atualizada!")
	
	if area_resposta_proxima:
		print("üéØ Card ", valor, " solto perto da √°rea '", area_resposta_proxima.name, "' - Dist√¢ncia: ", menor_distancia)
		# ‚≠ê‚≠ê CORRE√á√ÉO: Processar imediatamente, depois animar visualmente
		_emitir_sinal(area_resposta_proxima)
		# Animar para a posi√ß√£o da √°rea (opcional, apenas visual)
		var tween = create_tween()
		tween.tween_property(self, "global_position", area_resposta_proxima.global_position, 0.2)
	else:
		print("‚ùå Nenhuma √°rea pr√≥xima encontrada!")
		print("   Total de √°reas sobrepostas: ", areas_sobrepostas.size())
		if areas_sobrepostas.size() > 0:
			print("   √Åreas encontradas (mas n√£o reconhecidas):")
			for area in areas_sobrepostas:
				print("      - ", area.name, " (", area.get_class(), ")")
		voltar_para_original()

func _emitir_sinal(area: AreaResposta_2):
	print("üì¢ Emitindo sinal para √°rea - Card valor: ", valor)
	resposta_arrastada.emit(valor)
	
	if area.has_method("receber_card"):
		area.receber_card(self)

func get_valor() -> int:
	return valor

func voltar_para_original():
	print("‚Ü©Ô∏è Voltando card ", name, " para posi√ß√£o original")
	var tween = create_tween()
	tween.tween_property(self, "global_position", posicao_original, 0.3)

func fixar_na_posicao_atual():
	if fixado:
		return
		
	fixado = true
	_arrastando = false
	modulate = Color(0.7, 0.7, 0.7)
	collision_layer = 0
	collision_mask = 0
	input_pickable = false
	print("üìå Card ", name, " FIXADO! - Valor: ", valor)

func liberar_card():
	if not fixado:
		return
		
	fixado = false
	modulate = Color.WHITE
	collision_layer = 1
	collision_mask = 1
	input_pickable = true
	print("üîì Card ", name, " liberado - Valor: ", valor)

func _process(_delta: float):
	if _arrastando:
		global_position = get_global_mouse_position() + _offset

func _exit_tree():
	if _arrastando:
		_arrastando = false

# ‚≠ê FUN√á√ÉO DE DESAPARECER
func desaparecer():
	print("üîÑ Card desaparecendo: ", valor)
	
	# 1. Desativar todas as intera√ß√µes
	set_process_input(false)
	collision_layer = 0
	collision_mask = 0
	
	# 2. Anima√ß√£o de desaparecimento
	var tween = create_tween()
	tween.tween_property(self, "scale", Vector2(1.2, 1.2), 0.1)
	tween.tween_property(self, "scale", Vector2(0, 0), 0.3)
	tween.tween_property(self, "modulate", Color.TRANSPARENT, 0.3)
	
	# 3. Remover ap√≥s anima√ß√£o
	tween.tween_callback(queue_free)
	
	print("‚úÖ Card removido: ", valor)
